--- a/public/something.html
+++ b/public/something.html
@@ -6,7 +6,7 @@
     <title>Fun HTML Page with Multiple Features</title>
     <style>
         body {
-            background-color: #ffcccb;
+            background-color: #FFCCCB;
             color: #333;
             font-family: 'Arial', sans-serif;
             text-align: center;
@@ -14,11 +14,13 @@
             margin: 0;
             transition: background-color 0.5s;
         }
+
         h1 {
             font-size: 48px;
-            color: #ff69b4;
+            color: #FF69B4;
             margin-bottom: 20px;
         }
+
         button {
             padding: 10px 15px;
             font-size: 18px;
@@ -26,71 +28,92 @@
             border: none;
             color: white;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 8px;
             margin: 10px;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
             background-color: #45a049;
+            transform: scale(1.05);
         }
+
         .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
             margin-top: 20px;
         }
+
         .card {
             background-color: white;
             border: 1px solid #ccc;
             border-radius: 10px;
             padding: 20px;
-            margin: 10px;
-            width: 300px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
+
         .card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
         }
+
         input[type="text"], input[type="color"], input[type="file"], input[type="number"] {
-            padding: 5px;
-            font-size: 18px;
+            padding: 10px;
+            font-size: 16px;
             border-radius: 5px;
             border: 1px solid #ccc;
-            margin: 10px;
+            margin: 10px 0;
             width: calc(100% - 22px);
+            box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
         }
+
+        input[type="text"]:focus, input[type="color"]:focus, input[type="file"]:focus, input[type="number"]:focus {
+            border-color: #FF69B4;
+            outline: none; 
+            box-shadow: 0 0 5px rgba(255, 105, 180, 0.5);
+        }
+
         .quote, .fact, .joke, .quiz-question, .feedback, .sticky-note {
             font-size: 18px;
-            margin: 10px;
-            font-style: italic;
             color: #555;
         }
+
         .carousel img {
             width: 100%;
             border-radius: 10px;
         }
+
         .sticky-notes-container {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
+
         .sticky-note {
             background-color: yellow;
             border: 1px solid #ccc;
             border-radius: 5px;
             padding: 10px;
             margin: 5px;
+            cursor: pointer;
         }
+
         .dice-result {
             font-size: 24px;
         }
+
         #hangmanWord {
             font-size: 24px;
-            letter-spacing: 10px;
+            letter-spacing: 15px;
         }
+
         #weatherInfo {
             margin-top: 15px;
+            font-style: italic;
         }
+
         canvas {
             border: 1px solid #ccc;
             background: white;
@@ -102,7 +125,6 @@
     <h1>Welcome to My Fun HTML Page!</h1>
 
     <div class="container">
-
         <!-- Dynamic Text -->
         <div class="card">
             <p id="dynamicText">Click the button below to change this text!</p>
@@ -230,7 +252,7 @@
             <button onclick="fetchRandomQuote()">Get Random Quote</button>
             <div id="apiQuote"></div>
         </div>
-        
+
         <!-- Weather Information Fetcher -->
         <div class="card">
             <h3>Weather Information</h3>
@@ -255,6 +277,23 @@
             <input type="text" id="toCurrency" placeholder="To (e.g., EUR)" />
             <button onclick="convertCurrency()">Convert</button>
             <div id="conversionResult"></div>
+        </div>
+
+        <!-- Rock, Paper, Scissors Game -->
+        <div class="card">
+            <h3>Rock, Paper, Scissors</h3>
+            <p>Choose your option:</p>
+            <button onclick="playRPS('rock')">Rock</button>
+            <button onclick="playRPS('paper')">Paper</button>
+            <button onclick="playRPS('scissors')">Scissors</button>
+            <div id="rpsResult"></div>
+        </div>
+
+        <!-- Random Activity Generator -->
+        <div class="card">
+            <h3>Random Activity Generator</h3>
+            <button onclick="getRandomActivity()">Give Me an Activity!</button>
+            <div id="activityDisplay"></div>
         </div>
 
     </div>
@@ -577,185 +616,54 @@
                 document.getElementById('conversionResult').innerText = "Error fetching conversion rates.";
             }
         }
+
+        // Rock, Paper, Scissors Game
+        function playRPS(userChoice) {
+            const choices = ['rock', 'paper', 'scissors'];
+            const computerChoice = choices[Math.floor(Math.random() * 3)];
+            let result;
+
+            if ((userChoice === 'rock' && computerChoice === 'scissors') || 
+                (userChoice === 'paper' && computerChoice === 'rock') || 
+                (userChoice === 'scissors' && computerChoice === 'paper')) {
+                result = "You win! 🙂";
+            } else if (userChoice === computerChoice) {
+                result = "It's a draw! 🤝";
+            } else {
+                result = "You lose! 😢";
+            }
+
+            document.getElementById('rpsResult').innerText = `Computer chose: ${computerChoice}. ${result}`;
+        }
+
+        // Random Activity Generator
+        const activities = [
+            "Go for a walk",
+            "Read a book",
+            "Watch a movie",
+            "Try a new recipe",
+            "Exercise for 30 minutes",
+            "Call a friend",
+            "Start a new hobby",
+            "Listen to a podcast",
+            "Clean your room",
+            "Meditate for 10 minutes",
+            "Visit a park",
+            "Write in a journal",
+            "Learn a new skill online",
+            "Paint or draw something",
+            "Do a puzzle",
+            "Plan your next vacation",
+            "Try yoga or stretching",
+            "Volunteer in your community",
+            "Have a picnic",
+            "Organize your closet"
+        ];
+
+        function getRandomActivity() {
+            const randomIndex = Math.floor(Math.random() * activities.length);
+            document.getElementById('activityDisplay').innerText = activities[randomIndex];
+        }
     </script>
 </body>
 </html>
-<!-- Rock, Paper, Scissors Game -->
-<div class="card">
-    <h3>Rock, Paper, Scissors</h3>
-    <p>Choose your option:</p>
-    <button onclick="playRPS('rock')">Rock</button>
-    <button onclick="playRPS('paper')">Paper</button>
-    <button onclick="playRPS('scissors')">Scissors</button>
-    <div id="rpsResult"></div>
-</div>
-
-<script>
-    function playRPS(userChoice) {
-        const choices = ['rock', 'paper', 'scissors'];
-        const computerChoice = choices[Math.floor(Math.random() * 3)];
-        let result;
-
-        if ((userChoice === 'rock' && computerChoice === 'scissors') || 
-            (userChoice === 'paper' && computerChoice === 'rock') || 
-            (userChoice === 'scissors' && computerChoice === 'paper')) {
-            result = "You win! 🙂";
-        } else if (userChoice === computerChoice) {
-            result = "It's a draw! 🤝";
-        } else {
-            result = "You lose! 😢";
-        }
-
-        document.getElementById('rpsResult').innerText = `Computer chose: ${computerChoice}. ${result}`;
-    }
-</script>
-<!-- Random Activity Generator -->
-<div class="card">
-    <h3>Random Activity Generator</h3>
-    <button onclick="getRandomActivity()">Give Me an Activity!</button>
-    <div id="activityDisplay"></div>
-</div>
-
-<script>
-    const activities = [
-        "Go for a walk",
-        "Read a book",
-        "Watch a movie",
-        "Try a new recipe",
-        "Exercise for 30 minutes",
-        "Call a friend",
-        "Start a new hobby",
-        "Listen to a podcast",
-        "Clean your room",
-        "Meditate for 10 minutes",
-        "Visit a park",
-        "Write in a journal",
-        "Learn a new skill online",
-        "Paint or draw something",
-        "Do a puzzle",
-        "Plan your next vacation",
-        "Try yoga or stretching",
-        "Volunteer in your community",
-        "Have a picnic",
-        "Organize your closet"
-    ];
-
-    function getRandomActivity() {
-        const randomIndex = Math.floor(Math.random() * activities.length);
-        document.getElementById('activityDisplay').innerText = activities[randomIndex];
-    }
-</script>
-body {
-    background-color: #FFCCCB;
-    color: #333;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    padding: 20px;
-    margin: 0;
-    transition: background-color 0.5s;
-}
-
-h1 {
-    font-size: 48px;
-    color: #FF69B4;
-    margin-bottom: 20px;
-}
-
-button {
-    padding: 10px 15px;
-    font-size: 18px;
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    cursor: pointer;
-    border-radius: 8px;
-    margin: 10px;
-    transition: background-color 0.3s, transform 0.3s;
-}
-
-button:hover {
-    background-color: #45a049;
-    transform: scale(1.05);
-}
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.card {
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
-}
-
-input[type="text"], input[type="color"], input[type="file"], input[type="number"] {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin: 10px 0;
-    width: calc(100% - 22px);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-input[type="text"]:focus, input[type="color"]:focus, input[type="file"]:focus, input[type="number"]:focus {
-    border-color: #FF69B4;
-    outline: none; 
-    box-shadow: 0 0 5px rgba(255, 105, 180, 0.5);
-}
-
-.quote, .fact, .joke, .quiz-question, .feedback, .sticky-note {
-    font-size: 18px;
-    color: #555;
-}
-
-.carousel img {
-    width: 100%;
-    border-radius: 10px;
-}
-
-.sticky-notes-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.sticky-note {
-    background-color: yellow;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 5px;
-    cursor: pointer;
-}
-
-.dice-result {
-    font-size: 24px;
-}
-
-#hangmanWord {
-    font-size: 24px;
-    letter-spacing: 15px;
-}
-
-#weatherInfo {
-    margin-top: 15px;
-    font-style: italic;
-}
-
-canvas {
-    border: 1px solid #ccc;
-    background: white;
-    cursor: crosshair;
-}
