--- a/public/t1a0-basic.html
+++ b/public/t1a0-basic.html
@@ -3,47 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Switcher Example</title>
+    <title>Fancy Image Switcher</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f8ff;
-            text-align: center;
-            padding: 20px;
-            height: 100vh; /* Full height of the viewport */
+            background: linear-gradient(135deg, #e0f7fa, #80deea);
             display: flex;
-            flex-direction: column;
-            justify-content: center; /* Center vertically */
+            justify-content: center;
+            align-items: center;
+            flex-direction: column; /* Arrange items in a column */
+            height: 100vh; /* Full height of the viewport */
+            margin: 0; /* Remove default margin */
+            text-align: center; /* Center text */
+            color: #37474f; /* Darker text color for contrast */
         }
 
         a {
             text-decoration: none;
-            color: #007bff;
+            color: #fff;
             font-size: 24px;
             font-weight: bold;
             padding: 10px 20px;
-            border: 2px solid #007bff;
+            margin-bottom: 20px; /* Space below the link */
             border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
+            background-color: #007bff;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         a:hover {
-            background-color: #007bff;
-            color: #ffffff;
+            background-color: #0056b3;
+            transform: scale(1.05); /* Slight enlargement on hover */
         }
 
         .image-container {
             display: flex;
             justify-content: center; /* Center images horizontally */
+            align-items: center; /* Align images vertically */
+            margin-bottom: 20px; /* Space below the images */
         }
 
         img {
-            margin: 20px;
-            border: 5px solid #ddd;
+            margin: 0 10px; /* Adjust margin between images */
+            border: 8px solid #fff; /* White border for contrast */
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 300px; /* Set a fixed width for consistency */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Increased shadow for depth */
+            width: 300px; /* Fixed width */
             display: none; /* Initially hide images */
+            transition: transform 0.3s; /* Add a transform transition */
         }
 
         #image1 {
@@ -58,12 +64,18 @@
             background-color: #007bff;
             color: white;
             cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 20px; /* Space above the button */
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         button:hover {
             background-color: #0056b3;
+            transform: scale(1.05); /* Slight enlargement on hover */
+        }
+        
+        @media (max-width: 768px) {
+            img {
+                width: 80vw; /* Responsive sizing for smaller screens */
+            }
         }
     </style>
 </head>
