--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,80 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animal Image Fetcher</title>
+    <title>Event Handling Example</title>
     <style>
-        #animalImage {
-            display: none; 
-            margin-top: 20px; 
-            max-width: 100%; 
-            height: auto;
+        body {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #f0f0f0;
+        }
+        #coordinates, #message, #buttonLocation {
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid #333;
+            width: 200px;
+            text-align: center;
+        }
+        #moveableButton {
+            position: absolute;
         }
     </style>
 </head>
-<body>
-    <h1>Animal Image Fetcher</h1>
+<body onmousemove="document.getElementById('coordinates').innerHTML = 'x: ' + event.clientX + ', y: ' + event.clientY" 
+      onkeydown="document.getElementById('coordinates').innerHTML = 'key: ' + event.key">
     
-    <select id="animalOptions" size="1" onchange="updateAnimalUrl(this.value)">
-        <option value="https://dog.ceo/api/breeds/image/random">Dog</option>
-        <option value="https://aws.random.cat/meow">Cat</option>
-        <option value="https://some-random-api.ml/img/birb">Bird</option>
-    </select><br><br>
+    <b onTouchEnd="document.getElementById('coordinates').innerHTML = 'onTouchEnd'">Input:</b>
 
-    <div id="animalJson">Fetched JSON will appear here.</div>
-    <img id="animalImage" src="" alt="Fetched Image" />
+    <input type="text" id="myFirstName" value="Aden" onblur="document.getElementById('coordinates').innerHTML = 'onBlur'"><br><br>
 
-    <input type="hidden" id="animalUrl" value="https://dog.ceo/api/breeds/image/random"/>
+    <input type="button" value="Show on Page" onclick="document.getElementById('message').innerHTML = 'Hey!'"><br><br>
 
-    <button id="showImageButton" onclick="displayAnimalImage()" style="margin-top: 20px;">Show Image</button>
+    <div id="coordinates">...</div>
+    <div id="message">...</div>
+    <div id="buttonLocation">Button Coordinates: <span id="buttonCoords">x: 0, y: 0</span></div>
+    
+    <button id="moveableButton" onclick="moveButton()">Move Me!</button>
 
     <script>
-        let currentImageSrc = ""; // Variable to store the current image source
+        function moveButton() {
+            const button = document.getElementById('moveableButton');
+            const x = Math.random() * (window.innerWidth - 100); // 100 is the button width to keep it in view
+            const y = Math.random() * (window.innerHeight - 50); // 50 is the button height to keep it in view
 
-        // Functionality for Animal Images
-        async function fetchAnimalData() {
-            const url = document.getElementById('animalUrl').value;
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
+            button.style.left = x + 'px';
+            button.style.top = y + 'px';
 
-                const data = await response.json();
-                document.getElementById('animalJson').innerHTML = JSON.stringify(data, null, 2);
-
-                let imageUrl;
-                if (data.message) {  // For Dog API
-                    imageUrl = data.message;
-                } else if (data.file) {  // For Cat API
-                    imageUrl = data.file;
-                } else if (data.link) {  // For Bird API
-                    imageUrl = data.link;
-                } else {
-                    throw new Error("No image URL found in the response.");
-                }
-
-                currentImageSrc = imageUrl; // Store the current image source
-            } catch (error) {
-                console.error('Fetch error:', error);
-                document.getElementById('animalJson').textContent = 'Error fetching data: ' + error.message;
-                currentImageSrc = ""; // Clear current image source on error
-            }
+            // Update button coordinates
+            document.getElementById('buttonCoords').innerHTML = 'x: ' + Math.round(x) + ', y: ' + Math.round(y);
         }
 
-        function updateAnimalUrl(selectedUrl) {
-            document.getElementById('animalUrl').value = selectedUrl;
-            fetchAnimalData(); // Call to fetch data when the selection is updated
-        }
-
-        function displayAnimalImage() {
-            const animalImageElement = document.getElementById('animalImage');
-            if (currentImageSrc) {
-                animalImageElement.src = currentImageSrc; // Set the image source to the fetched image src
-                animalImageElement.style.display = 'block'; // Show the image
-            } else {
-                animalImageElement.style.display = 'none'; // Hide the image if no src is available
-            }
-        }
+        // Initial position of the button
+        moveButton();
     </script>
+
 </body>
 </html>
