--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Handling Example</title>
+    <title>Minesweeper Game</title>
     <style>
         body {
-            height: 100vh;
+            height: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -30,7 +30,7 @@
         }
         #minefield {
             display: grid;
-            grid-template-columns: repeat(8, 40px);
+            grid-template-columns: repeat(4, 40px);
             grid-gap: 2px;
             margin-top: 20px;
         }
@@ -61,36 +61,33 @@
     <input type="button" value="Show on Page" onclick="document.getElementById('message').innerHTML = 'Hey!'"><br><br>
 
     <div id="coordinates">...</div>
-    <div id="message">...</div>
     <div id="buttonLocation">Button Coordinates: <span id="buttonCoords">x: 0, y: 0</span></div>
     
     <button id="moveableButton" onclick="moveButton()">Move Me!</button>
 
     <div id="minefield"></div>
+    <div id="gameStatus" style="margin-top: 20px;"></div>
 
     <script>
-        const rows = 8;
-        const cols = 8;
-        const mineCount = 10;
+        const rows = 4;
+        const cols = 4;
+        const mineCount = 2; // Fewer mines for a smaller grid
         let minefield = [];
         let revealedCells = 0;
 
         function createMinefield() {
-            // Create a grid with empty cells
             minefield = Array.from({ length: rows }, () => Array(cols).fill(0));
 
-            // Place mines
             let minesPlaced = 0;
             while (minesPlaced < mineCount) {
                 const r = Math.floor(Math.random() * rows);
                 const c = Math.floor(Math.random() * cols);
-                if (minefield[r][c] === 0) { // If no mine is already placed
+                if (minefield[r][c] === 0) {
                     minefield[r][c] = 'X';
                     minesPlaced++;
                 }
             }
 
-            // Calculate numbers for cells around mines
             for (let r = 0; r < rows; r++) {
                 for (let c = 0; c < cols; c++) {
                     if (minefield[r][c] === 'X') {
@@ -127,8 +124,7 @@
             const col = event.target.dataset.col;
 
             if (minefield[row][col] === 'X') {
-                alert("Game Over! You hit a mine!");
-                revealAllCells();
+                gameOver();
                 return;
             }
 
@@ -137,11 +133,11 @@
             revealedCells++;
 
             if (revealedCells === (rows * cols - mineCount)) {
-                alert("Congratulations! You've cleared the minefield!");
+                document.getElementById('gameStatus').innerText = "Congratulations! You've cleared the minefield!";
             }
         }
 
-        function revealAllCells() {
+        function gameOver() {
             const cells = document.querySelectorAll('.cell');
             cells.forEach(cell => {
                 const row = cell.dataset.row;
@@ -154,6 +150,7 @@
                 }
                 cell.classList.add('revealed');
             });
+            document.getElementById('gameStatus').innerText = "Game Over! You hit a mine!";
         }
 
         function moveButton() {
