--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -226,10 +226,10 @@
             "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif",
             "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif",
             "sharpedo": "https://i.ibb.co/9q1yyvP/445-front-n.gif",
-            "mewtwo": "https://i.ibb.co/F0MRVbg/448-front-n.gif",
+            "lucario": "https://i.ibb.co/F0MRVbg/448-front-n.gif",
             "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
             "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
-            "mew": "https://i.ibb.co/s55wF1W/150-front-n.gif",
+            "mewtwo": "https://i.ibb.co/s55wF1W/150-front-n.gif",
             "latios": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
             "latias": "https://i.ibb.co/pfmTZS3/208-front-n.gif",
             "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif",
