--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -23,9 +23,9 @@
     <br><br><br><br>
 
     <script>
-        // Global variables here
-        let myGlobalX = 0;
-        let myClock;
+        // Global movement flags
+        let moveImg1 = { left: false, up: false, right: false, down: false };
+        let moveImg2 = { left: false, up: false, right: false, down: false };
 
         // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
@@ -47,47 +47,95 @@
                 document.getElementById('myImg01').style.left = '20px';
                 location.href = 't2a13-keydown.html'; // Go to your next level
             }
-            // Additional collision checks can be added here
         }
 
-        // Keydown event listener for movement
-        document.addEventListener('keydown', function(event) {
+        // Function to move images based on movement flags
+        function moveImages() {
             const img1 = document.getElementById('myImg01');
             const img2 = document.getElementById('myImg02');
 
-            // Move myImg01 with arrow keys (left, up, right, down)
+            // Move myImg01 (Greninja) based on flags
+            if (moveImg1.left) img1.style.left = (parseInt(img1.style.left) - 5) + 'px';
+            if (moveImg1.up) img1.style.top = (parseInt(img1.style.top) - 5) + 'px';
+            if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + 5) + 'px';
+            if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + 5) + 'px';
+
+            // Move myImg02 (Charizard) based on flags
+            if (moveImg2.left) img2.style.left = (parseInt(img2.style.left) - 5) + 'px';
+            if (moveImg2.up) img2.style.top = (parseInt(img2.style.top) - 5) + 'px';
+            if (moveImg2.right) img2.style.left = (parseInt(img2.style.left) + 5) + 'px';
+            if (moveImg2.down) img2.style.top = (parseInt(img2.style.top) + 5) + 'px';
+
+            myCheckHit(); // Check for collisions
+        }
+
+        // Set interval to regularly move images
+        setInterval(moveImages, 100);
+
+        // Keydown event listener for movement
+        document.addEventListener('keydown', function(event) {
             switch (event.key) {
+                // Control for myImg01 (Greninja) using arrow keys
                 case 'ArrowLeft':
-                    img1.style.left = (parseInt(img1.style.left) - 10) + 'px';
+                    moveImg1.left = true;
                     break;
                 case 'ArrowUp':
-                    img1.style.top = (parseInt(img1.style.top) - 10) + 'px';
+                    moveImg1.up = true;
                     break;
                 case 'ArrowRight':
-                    img1.style.left = (parseInt(img1.style.left) + 10) + 'px';
+                    moveImg1.right = true;
                     break;
                 case 'ArrowDown':
-                    img1.style.top = (parseInt(img1.style.top) + 10) + 'px';
+                    moveImg1.down = true;
+                    break;
+
+                // Control for myImg02 (Charizard) using WASD keys
+                case 'a':
+                    moveImg2.left = true;
+                    break;
+                case 'w':
+                    moveImg2.up = true;
+                    break;
+                case 'd':
+                    moveImg2.right = true;
+                    break;
+                case 's':
+                    moveImg2.down = true;
                     break;
             }
+        });
 
-            // Move myImg02 with WASD keys
+        // Keyup event listener to stop movement when key is released
+        document.addEventListener('keyup', function(event) {
             switch (event.key) {
-                case 'a': // Move left
-                    img2.style.left = (parseInt(img2.style.left) - 10) + 'px';
+                // Stop movement for myImg01
+                case 'ArrowLeft':
+                    moveImg1.left = false;
                     break;
-                case 'w': // Move up
-                    img2.style.top = (parseInt(img2.style.top) - 10) + 'px';
+                case 'ArrowUp':
+                    moveImg1.up = false;
                     break;
-                case 'd': // Move right
-                    img2.style.left = (parseInt(img2.style.left) + 10) + 'px';
+                case 'ArrowRight':
+                    moveImg1.right = false;
                     break;
-                case 's': // Move down
-                    img2.style.top = (parseInt(img2.style.top) + 10) + 'px';
+                case 'ArrowDown':
+                    moveImg1.down = false;
+                    break;
+
+                // Stop movement for myImg02
+                case 'a':
+                    moveImg2.left = false;
+                    break;
+                case 'w':
+                    moveImg2.up = false;
+                    break;
+                case 'd':
+                    moveImg2.right = false;
+                    break;
+                case 's':
+                    moveImg2.down = false;
                     break;
             }
-
-            myCheckHit(); // Checks for all collisions
         });
 
     </script>
@@ -96,6 +144,7 @@
     <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
 
     <input type="button" value="Auto Background Left" onclick="{
+        // This functionality remains unchanged
         clearInterval(myClock);
         let myTemp = '100px 0px';
         myClock = setInterval(function(){
