--- a/public/t2a23-game-template-aden.html
+++ b/public/t2a23-game-template-aden.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,27 +6,78 @@
     <title>T2A11 Game Template</title>
     <style>
         body {
-            background-repeat: repeat;
-            background-size: 80%;
-            background-image: url('myBackground01.jpg');
+            background-repeat: no-repeat; 
+            background-size: cover; 
+            background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
         }
         h1, h6 {
             text-align: center;
+            color: white; /* Change text color for visibility */
+        }
+        /* Modal styles */
+        .modal {
+            display: none; 
+            position: fixed; 
+            z-index: 999; 
+            left: 0;
+            top: 0;
+            width: 100%; 
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgb(0,0,0); 
+            background-color: rgba(0,0,0,0.4); 
+            padding-top: 100px; 
+        }
+        .modal-content {
+            background-color: white; 
+            margin: 5% auto; 
+            padding: 20px; 
+            border: 1px solid #888; 
+            width: 80%; 
+            text-align: center; 
+        }
+        #nextPage {
+            background-color: #4CAF50; 
+            color: white; 
+            border: none; 
+            padding: 10px 20px; 
+            cursor: pointer; 
+            font-size: 16px; 
+        }
+        #nextPage:hover {
+            background-color: #45a049; 
         }
     </style>
 </head>
+
 <body id="myBody">
 
     <h1>T2A11 Game Template by Fred</h1>
     <h6>Version 0.0.1</h6>
     <br><br><br><br>
 
-    <script>
-        // Global variables here
-        let myGlobalX = 0;
-        let myClock;
+    <!-- Modal for losing message -->
+    <div id="lossModal" class="modal">
+        <div class="modal-content">
+            <h2>You Lose</h2>
+            <p>Please click below to proceed to the next page.</p>
+            <button id="nextPage" onclick="goToNextPage()">Next Page</button>
+        </div>
+    </div>
 
-        // Global functions here
+    <script>
+        // Global movement flags
+        let moveImg1 = { left: false, up: false, right: false, down: false };
+        let moveImg2 = { left: false, up: false, right: false, down: false };
+
+        // Speed for movement
+        const speed = 5;
+        
+        // Background movement variables
+        let moveBackground = false;
+        let myGlobalX = 0;
+
+        // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
             let left1 = parseInt(document.getElementById(my1).style.left);
             let right1 = left1 + parseInt(document.getElementById(my1).style.width);
@@ -40,28 +90,135 @@
             return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
         }
 
+        // Function to check for collisions
         function myCheckHit() {
             if (myHitOther('myImg01', 'myImg02')) {
-                alert('You lose');
+                showLossModal();
                 document.getElementById('myImg01').style.left = '20px';
-                location.href = 't2a13-keydown.html'; // Go to your next level
             }
-            // More if statements here like the above
         }
+
+        // Function to move images based on movement flags
+        function moveImages() {
+            const img1 = document.getElementById('myImg01');
+            const img2 = document.getElementById('myImg02');
+
+            // Move myImg01 (Greninja) based on flags
+            if (moveImg1.left) img1.style.left = (parseInt(img1.style.left) - speed) + 'px';
+            if (moveImg1.up) img1.style.top = (parseInt(img1.style.top) - speed) + 'px';
+            if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + speed) + 'px';
+            if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + speed) + 'px';
+
+            // Move myImg02 (Charizard) based on flags
+            if (moveImg2.left) img2.style.left = (parseInt(img2.style.left) - speed) + 'px';
+            if (moveImg2.up) img2.style.top = (parseInt(img2.style.top) - speed) + 'px';
+            if (moveImg2.right) img2.style.left = (parseInt(img2.style.left) + speed) + 'px';
+            if (moveImg2.down) img2.style.top = (parseInt(img2.style.top) + speed) + 'px';
+
+            // Move background if the flag is set
+            if (moveBackground) {
+                myGlobalX += 5;  // Move background to the left
+                document.getElementById('myBody').style.backgroundPosition = myGlobalX + 'px 0px';
+            }
+
+            myCheckHit(); // Check for collisions
+        }
+
+        // Set interval to regularly move images and background
+        setInterval(moveImages, 100);
+
+        // Keydown event listener for movement
+        document.addEventListener('keydown', function(event) {
+            switch (event.key) {
+                case 'ArrowLeft':
+                    moveImg1.left = true;
+                    break;
+                case 'ArrowUp':
+                    moveImg1.up = true;
+                    break;
+                case 'ArrowRight':
+                    moveImg1.right = true;
+                    break;
+                case 'ArrowDown':
+                    moveImg1.down = true;
+                    break;
+                case 'a':
+                    moveImg2.left = true;
+                    break;
+                case 'w':
+                    moveImg2.up = true;
+                    break;
+                case 'd':
+                    moveImg2.right = true;
+                    break;
+                case 's':
+                    moveImg2.down = true;
+                    break;
+            }
+        });
+
+        // Keyup event listener to stop movement when key is released
+        document.addEventListener('keyup', function(event) {
+            switch (event.key) {
+                case 'ArrowLeft':
+                    moveImg1.left = false;
+                    break;
+                case 'ArrowUp':
+                    moveImg1.up = false;
+                    break;
+                case 'ArrowRight':
+                    moveImg1.right = false;
+                    break;
+                case 'ArrowDown':
+                    moveImg1.down = false;
+                    break;
+                case 'a':
+                    moveImg2.left = false;
+                    break;
+                case 'w':
+                    moveImg2.up = false;
+                    break;
+                case 'd':
+                    moveImg2.right = false;
+                    break;
+                case 's':
+                    moveImg2.down = false;
+                    break;
+            }
+        });
+
+        // Show loss modal
+        function showLossModal() {
+            const modal = document.getElementById('lossModal');
+            modal.style.display = 'block';
+        }
+
+        // Navigate to the next page
+        function goToNextPage() {
+            location.href = 't2a13-keydown.html'; // Replace with your next page URL
+        }
+
+        // Close modal when clicking outside of it
+        window.onclick = function(event) {
+            const modal = document.getElementById('lossModal');
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+
+        // Initialize Charizard's position
+        window.onload = function() {
+            const img2 = document.getElementById('myImg02');
+            img2.style.left = (window.innerWidth - parseInt(img2.style.width) - 50) + 'px'; // start Charizard on the right side of the screen
+            img2.style.top = (Math.random() * (window.innerHeight - parseInt(img2.style.height))) + 'px'; // random vertical position
+        };
+
     </script>
 
     <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
-    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
+    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
 
-    <input type="button" value="Auto Background Left" onclick="{
-        clearInterval(myClock);
-        let myTemp = '100px 0px';
-        myClock = setInterval(function(){
-            myGlobalX -= 5;
-            myTemp = myGlobalX + 'px 0px';
-            document.getElementById('myBody').style.backgroundPosition = myTemp;
-        }, 100);
-    }">
+    <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
 
     <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
         document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
